Kubernetes/RavenDB/raven.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raven-deployment
spec:
  selector:
    matchLabels:
      app: raven
  template:
    metadata:
      labels:
        app: raven
    spec:
      containers:
      - name: raven
        image: ravendb/ravendb:ubuntu-latest
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: raven-port
---
apiVersion: v1
kind: Service
metadata:
  name: raven-service
spec:
  selector:
    app: raven
  ports:
  - port: 8080
    targetPort: raven-port
    name: raven
