Kubernetes/RavenDB/raven-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raven-ingress
  labels:
    name: raven-ingress
spec:
  rules:
  - host: raven.bookvacation.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: raven-service
            port:
              name: raven
